--- a/Marvel-With-Gulp/dest/css/index.css
+++ b/Marvel-With-Gulp/dest/css/index.css
@@ -7,7 +7,7 @@
 }
 
 h2 {
-  color: #E8E8E8;
+  color: #e8e8e8;
   font: 91px Montserrat, sans-serif;
   text-transform: uppercase;
   font-weight: bolder;
@@ -18,7 +18,7 @@ h3 {
   font: 44px Montserrat, sans-serif;
   text-transform: uppercase;
   font-weight: 600;
-  color: #FFF;
+  color: #fff;
   padding-top: 50px;
 }
 
@@ -39,6 +39,10 @@ h4 {
 
 p {
   font: 16px Muli, sans-serif;
+}
+
+body {
+  margin: 0;
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
@@ -103,7 +107,7 @@ p {
   h3 {
     font: 32px Montserrat, sans-serif;
     font-weight: 700;
-    color: #FFF;
+    color: #fff;
     padding-top: 45px;
   }
   h4 {
@@ -162,7 +166,7 @@ p {
   border: 1px solid #444444;
   margin-top: 18px;
   text-transform: uppercase;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .form-main-button button {
@@ -172,15 +176,15 @@ p {
   color: #444444;
   border: 1px solid #444444;
   margin-top: 18px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .form-main-button button:hover {
-  background-color: #FFE400;
+  background-color: #ffe400;
 }
 
 .header_menu_background {
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -221,12 +225,12 @@ p {
 }
 
 .ul_menu a {
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
 }
 
 .ul_menu a:hover {
-  color: #FFE400;
+  color: #ffe400;
 }
 
 ul.ul_menu li:last-child {
@@ -426,7 +430,7 @@ ul.ul_menu li:last-child {
   border: 1px solid #444444;
   font-weight: 500;
   text-transform: none;
-  color: #FFE400;
+  color: #ffe400;
   background-color: #000;
   margin-right: 20px;
   margin-bottom: 82px;
@@ -438,8 +442,8 @@ ul.ul_menu li:last-child {
 
 .page_about .form-main-button button:hover {
   color: #000;
-  background-color: #FFE400;
-  border: 1px solid #FFE400;
+  background-color: #ffe400;
+  border: 1px solid #ffe400;
 }
 
 .first_content_text_block {
@@ -458,14 +462,14 @@ ul.ul_menu li:last-child {
 
 .first_c_text_block {
   background-color: #212121;
-  color: #FFF;
+  color: #fff;
   text-align: center;
 }
 
 .first_c_text_block i {
   padding-top: 90px;
   padding-bottom: 55px;
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .first_c_text_block h6 {
@@ -486,14 +490,14 @@ ul.ul_menu li:last-child {
   background: url(../img/hover-about.png);
   background-size: cover;
   background-repeat: no-repeat;
-  color: #FFF;
+  color: #fff;
   text-align: center;
 }
 
 .first_c_text_block:hover i {
   padding-top: 50px;
   padding-bottom: 45px;
-  color: #FFF;
+  color: #fff;
 }
 
 .first_c_text_block:hover h6 {
@@ -755,17 +759,17 @@ ul.ul_menu li:last-child {
 
 .container_to_input input {
   font: 15px Lato, sans-serif;
-  color: #E8E8E8;
+  color: #e8e8e8;
   border: none;
   width: 100%;
   height: 60px;
   padding-left: 20px;
-  border: 1px solid #E8E8E8;
+  border: 1px solid #e8e8e8;
 }
 
 textarea {
   font: 15px Lato, sans-serif;
-  color: #E8E8E8;
+  color: #e8e8e8;
   margin-top: 15px;
   padding-left: 20px;
   padding-top: 20px;
@@ -774,7 +778,7 @@ textarea {
   height: 510px;
   padding-bottom: 25px;
   resize: none;
-  border: 1px solid #E8E8E8;
+  border: 1px solid #e8e8e8;
 }
 
 .message .form-main-button {
@@ -787,12 +791,12 @@ textarea {
   font: 16px Montserrat, sans-serif;
   font-weight: bolder;
   margin-bottom: 127px;
-  background-color: #FFE400;
+  background-color: #ffe400;
 }
 
 .message .form-main-button button:hover {
   background-color: #444444;
-  color: #FFE400;
+  color: #ffe400;
 }
 
 @media (min-width: 1025px) and (max-width: 1199px) {
@@ -901,7 +905,7 @@ textarea {
 }
 
 .expert_block:hover {
-  background-color: #FFE400;
+  background-color: #ffe400;
 }
 
 .expert_block:hover img {
@@ -909,7 +913,7 @@ textarea {
 }
 
 .expert_block:hover .text_about_expert {
-  background-color: #FFE400;
+  background-color: #ffe400;
 }
 
 .expert_block:hover h5 {
@@ -943,7 +947,7 @@ textarea {
 }
 
 .expert_block:hover hr {
-  border-top: 1px dashed #6B6000;
+  border-top: 1px dashed #6b6000;
   width: 80%;
   margin: 0 auto;
 }
@@ -977,7 +981,7 @@ textarea {
 }
 
 .expert_block .social_icons i {
-  color: #6B6000;
+  color: #6b6000;
   font-size: 18px;
 }
 
@@ -994,7 +998,7 @@ textarea {
 }
 
 .text_about_expert {
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
 }
 
 .expert_block h5 {
@@ -1016,7 +1020,7 @@ textarea {
 }
 
 .text_about_expert hr {
-  border-top: 1px dashed #D0D0D0;
+  border-top: 1px dashed #d0d0d0;
   width: 80%;
   margin: 0 auto;
 }
@@ -1231,23 +1235,23 @@ textarea {
   border-radius: 32.5px;
 }
 
-.fourth_similar_block:nth-child(2n+1) .fourth_similar_block_circle {
-  background-color: #FFE400;
+.fourth_similar_block:nth-child(2n + 1) .fourth_similar_block_circle {
+  background-color: #ffe400;
   color: #212121;
 }
 
-.fourth_similar_block:nth-child(2n+1):hover .fourth_similar_block_circle {
+.fourth_similar_block:nth-child(2n + 1):hover .fourth_similar_block_circle {
   background-color: #212121;
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .fourth_similar_block:nth-child(2n) .fourth_similar_block_circle {
   background-color: #212121;
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .fourth_similar_block:nth-child(2n):hover .fourth_similar_block_circle {
-  background-color: #FFE400;
+  background-color: #ffe400;
   color: #212121;
 }
 
@@ -1329,7 +1333,7 @@ textarea {
 .impressed_by_our_work h3 {
   padding-top: 100px;
   font: 30px Lato, sans-serif;
-  color: #FFF;
+  color: #fff;
   font-weight: bolder;
   text-transform: uppercase;
 }
@@ -1337,7 +1341,7 @@ textarea {
 .impressed_by_our_work p {
   padding-top: 5px;
   font: 13px Muli, sans-serif;
-  color: #FFF;
+  color: #fff;
   padding-bottom: 86px;
 }
 
@@ -1435,17 +1439,19 @@ textarea {
   font-weight: 900;
 }
 
-.left_hover_photo-news, .right_hover_photo-news {
+.left_hover_photo-news,
+.right_hover_photo-news {
   width: 25px;
   height: 25px;
   border-radius: 13px;
-  border: 1px solid #FFF;
-  color: #FFF;
+  border: 1px solid #fff;
+  color: #fff;
 }
 
-.left_hover_photo-news:hover, .right_hover_photo-news:hover {
+.left_hover_photo-news:hover,
+.right_hover_photo-news:hover {
   border: 1px solid #000;
-  color: #FFF;
+  color: #fff;
   background-color: #000;
 }
 
@@ -1489,7 +1495,7 @@ textarea {
   display: block;
   width: 50px;
   height: 50px;
-  color: #FFF;
+  color: #fff;
   margin: 0 auto;
   margin-top: -120px;
   margin-bottom: 47px;
@@ -1500,7 +1506,7 @@ textarea {
 }
 
 .similar_news_photo_block .hover_news_video:hover {
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .hover_news_video p {
@@ -1518,7 +1524,7 @@ textarea {
 
 .grey_block_under_news_photo {
   position: relative;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
   color: #444444;
   border-radius: 20px;
   width: 60%;
@@ -1561,15 +1567,15 @@ textarea {
   font: 9px Montserrat, sans-serif;
   font-weight: bolder;
   color: #444444;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
   padding: 6px 16px;
   border-radius: 13px;
-  border: 2px solid  #F9F9F9;
+  border: 2px solid #f9f9f9;
 }
 
 .link_ten_block a:hover {
   color: #444444;
-  background-color: #FFE400;
+  background-color: #ffe400;
   border: 2px solid #444444;
 }
 
@@ -1586,16 +1592,18 @@ textarea {
   .news_page h2 {
     padding-top: 60px;
   }
-  .left_hover_photo-news, .right_hover_photo-news {
+  .left_hover_photo-news,
+  .right_hover_photo-news {
     width: 25px;
     height: 25px;
     border-radius: 13px;
-    border: 1px solid #FFF;
-    color: #FFF;
+    border: 1px solid #fff;
+    color: #fff;
   }
-  .left_hover_photo-news:hover, .right_hover_photo-news:hover {
+  .left_hover_photo-news:hover,
+  .right_hover_photo-news:hover {
     border: 1px solid #000;
-    color: #FFF;
+    color: #fff;
     background-color: #000;
   }
   .hover_photo-news {
@@ -1672,16 +1680,18 @@ textarea {
   .news_page h2 {
     padding-top: 40px;
   }
-  .left_hover_photo-news, .right_hover_photo-news {
+  .left_hover_photo-news,
+  .right_hover_photo-news {
     width: 25px;
     height: 25px;
     border-radius: 13px;
-    border: 1px solid #FFF;
-    color: #FFF;
+    border: 1px solid #fff;
+    color: #fff;
   }
-  .left_hover_photo-news:hover, .right_hover_photo-news:hover {
+  .left_hover_photo-news:hover,
+  .right_hover_photo-news:hover {
     border: 1px solid #000;
-    color: #FFF;
+    color: #fff;
     background-color: #000;
   }
   .hover_photo-news {
@@ -1753,7 +1763,7 @@ textarea {
 }
 
 .marvel_who_we_are p {
-  color: #F3F3F3;
+  color: #f3f3f3;
   max-width: 750px;
   margin: 0 auto;
   padding-top: 25px;
@@ -1771,9 +1781,9 @@ textarea {
   margin-bottom: 136px;
   text-transform: none;
   margin-right: 20px;
-  color: #FFF;
+  color: #fff;
   background-color: inherit;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
 }
 
 .marvel_who_we_are .form-main-button button:last-child {
@@ -1782,7 +1792,7 @@ textarea {
 
 .marvel_who_we_are .form-main-button button:hover {
   color: #000;
-  background-color: #FFE400;
+  background-color: #ffe400;
   border: 1px solid #444444;
 }
 
@@ -1897,7 +1907,7 @@ textarea {
 }
 
 .pricing_page h2 {
-  color: #E8D100;
+  color: #e8d100;
   padding-top: 83px;
 }
 
@@ -1927,7 +1937,7 @@ textarea {
 }
 
 .grey_top_price_block {
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
 }
 
 .grey_top_price_block p {
@@ -1954,7 +1964,7 @@ textarea {
 }
 
 .top_content_price_block {
-  color: #FFF;
+  color: #fff;
 }
 
 .top_content_price_block h6 {
@@ -1994,7 +2004,7 @@ textarea {
 }
 
 .main_content_price_block {
-  background-color: #FFF;
+  background-color: #fff;
   padding-top: 60px;
 }
 
@@ -2003,7 +2013,7 @@ textarea {
   font: 12px Muli, sans-serif;
   padding-top: 22px;
   padding-bottom: 22px;
-  border-bottom: 1px solid #E8E8E8;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .form-price_bottom-button {
@@ -2015,7 +2025,7 @@ textarea {
   font: 14px Montserrat, sans-serif;
   font-weight: 500;
   color: #444444;
-  background-color: #FFF;
+  background-color: #fff;
   padding-top: 14px;
   padding-bottom: 12px;
   width: 360px;
@@ -2023,7 +2033,7 @@ textarea {
 }
 
 .form-price_bottom-button button:hover {
-  color: #FFE400;
+  color: #ffe400;
   background-color: #000;
 }
 
@@ -2135,7 +2145,7 @@ textarea {
 .responsive_page h2 {
   padding-top: 155px;
   margin-left: -8px;
-  color: #FFE400;
+  color: #ffe400;
   font-size: 70px;
 }
 
@@ -2168,15 +2178,15 @@ textarea {
 .responsive_page .form-block-button button {
   font: 13px Montserrat, sans-serif;
   color: #000;
-  background-color: #FFE400;
+  background-color: #ffe400;
   padding: 13px 25px 14px 25px;
-  border: 0px solid #FFE400;
+  border: 0px solid #ffe400;
   font-weight: bolder;
   text-transform: uppercase;
 }
 
 .responsive_page .form-block-button button:hover {
-  color: #FFE400;
+  color: #ffe400;
   background-color: #000;
 }
 
@@ -2309,7 +2319,7 @@ textarea {
   margin-left: auto;
   margin-right: 0;
   padding-bottom: 70px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .service_page h2 {
@@ -2333,7 +2343,7 @@ textarea {
 }
 
 .service_page_content_block:hover {
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
 }
 
 .service_page_content_block i {
@@ -2447,7 +2457,7 @@ textarea {
 }
 
 .fifth_content {
-  background-color: #FFE400;
+  background-color: #ffe400;
 }
 
 .work_page {
@@ -2458,7 +2468,7 @@ textarea {
 }
 
 .work_page h2 {
-  color: #E8D100;
+  color: #e8d100;
   padding-top: 85px;
 }
 
@@ -2485,7 +2495,7 @@ textarea {
 }
 
 .work_page_buttons .form-block-button button:hover {
-  color: #FFE400;
+  color: #ffe400;
   background-color: #000;
   border: 1px solid #000;
 }
@@ -2504,13 +2514,13 @@ textarea {
 }
 
 .work_page_buttons .form-block-button i:hover {
-  color: #FFE400;
+  color: #ffe400;
   background-color: #000;
   border: 1px solid #000;
 }
 
 .fifth_photos_block {
-  background-color: #FFF;
+  background-color: #fff;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 0px;
@@ -2535,7 +2545,7 @@ textarea {
   height: 50px;
   max-width: 25%;
   border-radius: 25px;
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
   margin-top: -95px;
   z-index: 5;
 }
@@ -2545,13 +2555,13 @@ textarea {
   width: 25px;
   border-radius: 13px;
   border: 1px solid #000;
-  background-color: #FFF;
+  background-color: #fff;
   margin-right: 11px;
   z-index: 5;
 }
 
 .container_to_photos_block:hover .fifth_photos_block {
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
 }
 
 .icon_circle i {
@@ -2562,13 +2572,13 @@ textarea {
 }
 
 .icon_circle:hover {
-  border: 1px solid #FFE400;
-  background-color: #FFE400;
+  border: 1px solid #ffe400;
+  background-color: #ffe400;
 }
 
 .text_to_photo_block {
   display: flex;
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
   z-index: 4;
   margin-top: -27px;
 }
@@ -2600,7 +2610,7 @@ textarea {
 
 @media (min-width: 1025px) and (max-width: 1199px) {
   .fifth_photos_block {
-    background-color: #FFF;
+    background-color: #fff;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0px;
@@ -2617,7 +2627,7 @@ textarea {
   }
   .text_to_photo_block {
     display: flex;
-    background-color: #E8E8E8;
+    background-color: #e8e8e8;
     z-index: 4;
     margin-top: -26px;
   }
@@ -2656,7 +2666,7 @@ textarea {
     padding: 9px;
   }
   .fifth_photos_block {
-    background-color: #FFF;
+    background-color: #fff;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0px;
@@ -2743,12 +2753,12 @@ textarea {
 }
 
 .footer_social_icons i {
-  color: #FFF;
+  color: #fff;
   font-size: 20px;
 }
 
 .footer_social_icons i:hover {
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .footer_social_icons a {
@@ -2763,49 +2773,49 @@ textarea {
   width: 50px;
   height: 50px;
   border-radius: 25px;
-  border: 1px solid #E8E8E8;
+  border: 1px solid #e8e8e8;
   margin: 0 auto;
   margin-top: 62px;
   margin-bottom: 15px;
 }
 
 .footer_circle:hover {
-  border: 1px solid #FFE400;
+  border: 1px solid #ffe400;
 }
 
 .footer_circle i {
   font-size: 22px;
   padding-left: 0px;
   padding-top: 12px;
-  color: #FFF;
+  color: #fff;
 }
 
 .footer_circle:hover i {
-  color: #FFE400;
+  color: #ffe400;
 }
 
 .flang_content_footer a {
   font: 13px Muli, sans-serif;
-  color: #FFF;
+  color: #fff;
   padding-bottom: 83px;
   text-decoration: none;
 }
 
 .flang_content_footer p {
   font: 13px Muli, sans-serif;
-  color: #FFF;
+  color: #fff;
   padding-bottom: 83px;
 }
 
 .bottom_footer_bacground {
-  background-color: #2E2D2D;
+  background-color: #2e2d2d;
 }
 
 .bottom_footer {
   max-width: 1140px;
   margin: 0 auto;
   text-align: center;
-  color: #FFF;
+  color: #fff;
   padding-top: 12px;
   padding-bottom: 12px;
 }
