--- a/Marvel-With-Gulp/src/sass/_news_page.scss
+++ b/Marvel-With-Gulp/src/sass/_news_page.scss
@@ -1,43 +1,45 @@
-.tenth_content{
+.tenth_content {
   max-width: $max-width;
   margin: 0 auto;
   text-align: center;
 }
 
-.news_page h2{
+.news_page h2 {
   padding-top: 117px;
 }
 
-.news_page h4{
+.news_page h4 {
   font-weight: 900;
 }
 
-.left_hover_photo-news, .right_hover_photo-news{
+.left_hover_photo-news,
+.right_hover_photo-news {
   width: 25px;
   height: 25px;
   border-radius: 13px;
-  border: 1px solid #FFF;
-  color: #FFF;
+  border: 1px solid #fff;
+  color: #fff;
 }
 
-.left_hover_photo-news:hover, .right_hover_photo-news:hover{
+.left_hover_photo-news:hover,
+.right_hover_photo-news:hover {
   border: 1px solid #000;
-  color: #FFF;
+  color: #fff;
   background-color: #000;
 }
 
-.hover_photo-news{
+.hover_photo-news {
   display: none;
   position: relative;
   z-index: 3;
 }
 
-.similar_news_photo_block img{
+.similar_news_photo_block img {
   position: relative;
   z-index: 1;
 }
 
-.similar_news_photo_block:hover .hover_photo-news{
+.similar_news_photo_block:hover .hover_photo-news {
   display: flex;
   justify-content: space-between;
   margin-top: -50px;
@@ -45,28 +47,28 @@
   margin-right: 20px;
 }
 
-.similar_news_photo_block:hover .grey_block_under_news_photo{
+.similar_news_photo_block:hover .grey_block_under_news_photo {
   margin-top: 2px;
 }
 
-.news_photo_block{
+.news_photo_block {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 30px;
   padding-top: 92px;
 }
 
-.hover_news_video{
+.hover_news_video {
   display: none;
   position: relative;
   z-index: 3;
 }
 
-.similar_news_photo_block:hover .hover_news_video{
+.similar_news_photo_block:hover .hover_news_video {
   display: block;
   width: 50px;
   height: 50px;
-  color: #FFF;
+  color: #fff;
   margin: 0 auto;
   margin-top: -120px;
   margin-bottom: 47px;
@@ -76,17 +78,17 @@
   background-color: #000;
 }
 
-.similar_news_photo_block .hover_news_video:hover{
+.similar_news_photo_block .hover_news_video:hover {
   color: $color_for_yellow;
 }
 
-.hover_news_video p{
+.hover_news_video p {
   font-size: 28px;
   padding-top: 5px;
   padding-left: 5px;
 }
 
-.grey_block_under_news_photo p{
+.grey_block_under_news_photo p {
   font: 12px $font-article;
   text-transform: uppercase;
   font-weight: bolder;
@@ -95,7 +97,7 @@
 
 .grey_block_under_news_photo {
   position: relative;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
   color: $color_for_h1;
   border-radius: 20px;
   width: 60%;
@@ -105,21 +107,21 @@
   z-index: 2;
 }
 
-.similar_news_photo_block h6{
+.similar_news_photo_block h6 {
   font: 18px $font-article;
   font-weight: bolder;
   text-transform: uppercase;
   color: $color_for_h1;
 }
 
-.text_to_ten_block p:first-child{
+.text_to_ten_block p:first-child {
   padding-top: 17px;
   font: 10px $font-basic;
   text-transform: uppercase;
   color: $color_for_dark_grey;
 }
 
-.text_to_ten_block p:last-child{
+.text_to_ten_block p:last-child {
   padding-top: 28px;
   font: 13px $font-basic;
   color: $color_for_dark_grey;
@@ -128,219 +130,221 @@
   line-height: 1.8;
 }
 
-.link_ten_block{
+.link_ten_block {
   margin-top: 36px;
 }
 
-.link_ten_block a{
+.link_ten_block a {
   text-decoration: none;
   text-transform: uppercase;
   font: 9px $font-article;
   font-weight: bolder;
   color: $color_for_h1;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
   padding: 6px 16px;
   border-radius: 13px;
-  border: 2px solid  #F9F9F9;
+  border: 2px solid #f9f9f9;
 }
 
-.link_ten_block a:hover{
+.link_ten_block a:hover {
   color: $color_for_h1;
   background-color: $color_for_yellow;
-  border: 2px solid   $color_for_h1;
+  border: 2px solid $color_for_h1;
 }
 
-@media (min-width:1025px) and (max-width:1199px) {
-
-.news_photo_block{
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 100px;
+@media (min-width: 1025px) and (max-width: 1199px) {
+  .news_photo_block {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 100px;
+  }
 }
-}
 
-@media (min-width:769px) and (max-width:1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   /*  Ten Content    */
 
-.news_page h2{
-  padding-top: 60px;
+  .news_page h2 {
+    padding-top: 60px;
+  }
+
+  .left_hover_photo-news,
+  .right_hover_photo-news {
+    width: 25px;
+    height: 25px;
+    border-radius: 13px;
+    border: 1px solid #fff;
+    color: #fff;
+  }
+
+  .left_hover_photo-news:hover,
+  .right_hover_photo-news:hover {
+    border: 1px solid #000;
+    color: #fff;
+    background-color: #000;
+  }
+
+  .hover_photo-news {
+    display: none;
+    position: relative;
+    z-index: 3;
+  }
+
+  .similar_news_photo_block img {
+    position: relative;
+    z-index: 1;
+  }
+
+  .similar_news_photo_block:hover .hover_photo-news {
+    display: flex;
+    justify-content: space-between;
+    margin-top: -50px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .similar_news_photo_block:hover .grey_block_under_news_photo {
+    margin-top: 2px;
+  }
+
+  .news_photo_block {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 50px;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
-.left_hover_photo-news, .right_hover_photo-news{
-  width: 25px;
-  height: 25px;
-  border-radius: 13px;
-  border: 1px solid #FFF;
-  color: #FFF;
-}
-
-.left_hover_photo-news:hover, .right_hover_photo-news:hover{
-  border: 1px solid #000;
-  color: #FFF;
-  background-color: #000;
-}
-
-.hover_photo-news{
-  display: none;
-  position: relative;
-  z-index: 3;
-}
-
-.similar_news_photo_block img{
-  position: relative;
-  z-index: 1;
-}
-
-.similar_news_photo_block:hover .hover_photo-news{
-  display: flex;
-  justify-content: space-between;
-  margin-top: -50px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.similar_news_photo_block:hover .grey_block_under_news_photo{
-  margin-top: 2px;
-}
-
-.news_photo_block{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 30px;
-  grid-row-gap: 50px;
-  padding-top: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-}
-
-@media (min-width:426px) and (max-width:768px) {
-
+@media (min-width: 426px) and (max-width: 768px) {
   /*  Ten Content    */
 
-.news_page h2{
-  padding-top: 40px;
+  .news_page h2 {
+    padding-top: 40px;
+  }
+
+  .news_photo_block {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    padding-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .similar_news_photo_block:hover .hover_news_video {
+    margin-top: -110px;
+    margin-bottom: 37px;
+  }
+
+  .grey_block_under_news_photo p {
+    font: 10px $font-article;
+    font-weight: bolder;
+    padding: 8px 13px;
+  }
+
+  .similar_news_photo_block h6 {
+    font: 15px $font-article;
+    font-weight: bolder;
+  }
+
+  .text_to_ten_block p:first-child {
+    font: 8px $font-basic;
+  }
+
+  .text_to_ten_block p:last-child {
+    padding-top: 20px;
+    font: 11px $font-basic;
+  }
+
+  .link_ten_block {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
 
-.news_photo_block{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 30px;
-  padding-top: 20px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.similar_news_photo_block:hover .hover_news_video{
-  margin-top: -110px;
-  margin-bottom: 37px;
-}
-
-.grey_block_under_news_photo p{
-  font: 10px $font-article;
-  font-weight: bolder;
-  padding: 8px 13px;
-}
-
-.similar_news_photo_block h6{
-  font: 15px $font-article;
-  font-weight: bolder;
-}
-
-.text_to_ten_block p:first-child{
-  font: 8px $font-basic;
-}
-
-.text_to_ten_block p:last-child{
-  padding-top: 20px;
-  font: 11px $font-basic;
-}
-
-.link_ten_block{
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-}
-
-@media (max-width:425px) {
+@media (max-width: 425px) {
   /*  Ten Content    */
 
-.news_page h2{
-  padding-top: 40px;
-}
+  .news_page h2 {
+    padding-top: 40px;
+  }
 
-.left_hover_photo-news, .right_hover_photo-news{
-  width: 25px;
-  height: 25px;
-  border-radius: 13px;
-  border: 1px solid #FFF;
-  color: #FFF;
-}
+  .left_hover_photo-news,
+  .right_hover_photo-news {
+    width: 25px;
+    height: 25px;
+    border-radius: 13px;
+    border: 1px solid #fff;
+    color: #fff;
+  }
 
-.left_hover_photo-news:hover, .right_hover_photo-news:hover{
-  border: 1px solid #000;
-  color: #FFF;
-  background-color: #000;
-}
+  .left_hover_photo-news:hover,
+  .right_hover_photo-news:hover {
+    border: 1px solid #000;
+    color: #fff;
+    background-color: #000;
+  }
 
-.hover_photo-news{
-  display: none;
-  position: relative;
-  z-index: 3;
-}
+  .hover_photo-news {
+    display: none;
+    position: relative;
+    z-index: 3;
+  }
 
-.similar_news_photo_block img{
-  position: relative;
-  z-index: 1;
-}
+  .similar_news_photo_block img {
+    position: relative;
+    z-index: 1;
+  }
 
-.similar_news_photo_block:hover .hover_photo-news{
-  display: flex;
-  justify-content: space-between;
-  margin-top: -50px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
+  .similar_news_photo_block:hover .hover_photo-news {
+    display: flex;
+    justify-content: space-between;
+    margin-top: -50px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
-.similar_news_photo_block:hover .grey_block_under_news_photo{
-  margin-top: 2px;
-}
+  .similar_news_photo_block:hover .grey_block_under_news_photo {
+    margin-top: 2px;
+  }
 
-.news_photo_block{
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-  padding-top: 20px;
-}
+  .news_photo_block {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    padding-top: 20px;
+  }
 
-.grey_block_under_news_photo p{
-  font: 11px $font-article;
-  font-weight: bolder;
-  padding: 8px 16px;
-}
+  .grey_block_under_news_photo p {
+    font: 11px $font-article;
+    font-weight: bolder;
+    padding: 8px 16px;
+  }
 
-.grey_block_under_news_photo {
-  width: 50%;
-}
+  .grey_block_under_news_photo {
+    width: 50%;
+  }
 
-.similar_news_photo_block h6{
-  font: 15px $font-article;
-  font-weight: bolder;
-}
+  .similar_news_photo_block h6 {
+    font: 15px $font-article;
+    font-weight: bolder;
+  }
 
-.text_to_ten_block p:first-child{
-  font: 8px $font-basic;
-}
+  .text_to_ten_block p:first-child {
+    font: 8px $font-basic;
+  }
 
-.text_to_ten_block p:last-child{
-  padding-top: 20px;
-  font: 12px $font-basic;
-  padding-left: 12px;
-  padding-right: 12px;
-}
+  .text_to_ten_block p:last-child {
+    padding-top: 20px;
+    font: 12px $font-basic;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 
-.link_ten_block{
-  margin-top: 25px;
-}
+  .link_ten_block {
+    margin-top: 25px;
+  }
 }
