--- a/Marvel-With-Gulp/src/sass/_work_page.scss
+++ b/Marvel-With-Gulp/src/sass/_work_page.scss
@@ -1,29 +1,29 @@
-.fifth_content{
+.fifth_content {
   background-color: $color_for_yellow;
 }
 
-.work_page{
+.work_page {
   max-width: $max-width;
   margin: 0 auto;
   text-align: center;
   padding-bottom: 55px;
 }
 
-.work_page h2{
-  color: #E8D100;
+.work_page h2 {
+  color: #e8d100;
   padding-top: 85px;
 }
 
-.work_page h4{
+.work_page h4 {
   font-weight: 800;
   color: #000;
 }
 
-.work_page_buttons{
+.work_page_buttons {
   padding-top: 40px;
 }
 
-.work_page_buttons .form-block-button button{
+.work_page_buttons .form-block-button button {
   font: 13px $font-article;
   color: #000;
   background-color: inherit;
@@ -34,20 +34,19 @@
   font-weight: 700;
   padding-top: 9px;
   padding-bottom: 9px;
-
 }
 
-.work_page_buttons .form-block-button button:hover{
+.work_page_buttons .form-block-button button:hover {
   color: $color_for_yellow;
   background-color: #000;
   border: 1px solid #000;
 }
 
-.work_page_buttons .form-block-button button:last-child{
+.work_page_buttons .form-block-button button:last-child {
   margin-right: 0px;
 }
 
-.work_page_buttons .form-block-button i{
+.work_page_buttons .form-block-button i {
   font-size: 14px;
   color: #fff;
   background-color: #000;
@@ -56,30 +55,30 @@
   margin-right: 5px;
 }
 
-.work_page_buttons .form-block-button i:hover{
+.work_page_buttons .form-block-button i:hover {
   color: $color_for_yellow;
   background-color: #000;
   border: 1px solid #000;
 }
 
-.fifth_photos_block{
-  background-color: #FFF;
+.fifth_photos_block {
+  background-color: #fff;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 0px;
 }
 
-.container_to_photos_block{
+.container_to_photos_block {
   position: relative;
   z-index: 1;
 }
 
-.text_hover_to_photos_block{
+.text_hover_to_photos_block {
   position: relative;
   z-index: 2;
 }
 
-.text_hover_to_photos_block .icons_to_photo_block{
+.text_hover_to_photos_block .icons_to_photo_block {
   position: relative;
   margin-left: auto;
   display: flex;
@@ -93,21 +92,21 @@
   z-index: 5;
 }
 
-.icon_circle{
+.icon_circle {
   height: 25px;
   width: 25px;
   border-radius: 13px;
   border: 1px solid #000;
-  background-color: #FFF;
+  background-color: #fff;
   margin-right: 11px;
   z-index: 5;
 }
 
-.container_to_photos_block:hover .fifth_photos_block{
+.container_to_photos_block:hover .fifth_photos_block {
   background-color: $color_for_grey_h2;
 }
 
-.icon_circle i{
+.icon_circle i {
   color: #000;
   font-size: 13px;
   padding-left: 5px;
@@ -119,158 +118,156 @@
   background-color: $color_for_yellow;
 }
 
-.text_to_photo_block{
+.text_to_photo_block {
   display: flex;
   background-color: $color_for_grey_h2;
   z-index: 4;
   margin-top: -27px;
 }
 
-.text_to_photo_block h6{
+.text_to_photo_block h6 {
   font: 14px $font-article;
   font-weight: bolder;
-  text-transform:uppercase;
+  text-transform: uppercase;
   color: $color_for_h1;
   padding-bottom: 25px;
   padding-left: 10px;
   padding-top: 25px;
 }
 
-.text_to_photo_block p{
+.text_to_photo_block p {
   padding-top: 30px;
   color: $color_for_dark_grey;
   font: 9px $font-basic;
   text-transform: uppercase;
 }
 
-.text_hover_to_photos_block{
+.text_hover_to_photos_block {
   display: none;
 }
 
-.container_to_photos_block:hover .text_hover_to_photos_block{
+.container_to_photos_block:hover .text_hover_to_photos_block {
   display: block;
 }
 
-@media (min-width:1025px) and (max-width:1199px) {
-
-.fifth_photos_block{
-  background-color: #FFF;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0px;
+@media (min-width: 1025px) and (max-width: 1199px) {
+  .fifth_photos_block {
+    background-color: #fff;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0px;
+  }
 }
-}
 
-@media (min-width:769px) and (max-width:1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   /*  Fifth content  */
 
-.work_page h2{
-  padding-top: 30px;
+  .work_page h2 {
+    padding-top: 30px;
+  }
+
+  .fifth_photos_block {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .text_to_photo_block {
+    display: flex;
+    background-color: $color_for_grey_h2;
+    z-index: 4;
+    margin-top: -26px;
+  }
+
+  .icon_circle {
+    display: none;
+  }
 }
 
-.fifth_photos_block{
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.text_to_photo_block{
-  display: flex;
-  background-color: $color_for_grey_h2;
-  z-index: 4;
-  margin-top: -26px;
-}
-
-.icon_circle{
-  display: none;
-}
-}
-
-@media (min-width:426px) and (max-width:768px) {
-
+@media (min-width: 426px) and (max-width: 768px) {
   /*  Fifth content  */
 
-.work_page{
-  max-width: $max-width;
-  margin: 0 auto;
-  text-align: center;
-  padding-bottom: 45px;
+  .work_page {
+    max-width: $max-width;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 45px;
+  }
+
+  .work_page_buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .work_page_buttons .form-block-button button {
+    font: 11px $font-article;
+    width: 85px;
+    font-weight: 700;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  .work_page_buttons .form-block-button button:last-child {
+    width: 105px;
+    font: 11px $font-article;
+    font-weight: 700;
+  }
+
+  .work_page_buttons .form-block-button i {
+    padding: 9px;
+  }
+
+  .fifth_photos_block {
+    background-color: #fff;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0px;
+  }
+
+  .icon_circle {
+    display: none;
+  }
 }
 
-.work_page_buttons{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.work_page_buttons .form-block-button button{
-  font: 11px $font-article;
-  width: 85px;
-  font-weight: 700;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 10px;
-}
-
-.work_page_buttons .form-block-button button:last-child{
-  width: 105px;
-  font: 11px $font-article;
-  font-weight: 700;
-}
-
-.work_page_buttons .form-block-button i{
-  padding: 9px;
-}
-
-.fifth_photos_block{
-  background-color: #FFF;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 0px;
-}
-
-.icon_circle{
-  display: none;
-}
-}
-
-@media (max-width:425px) {
+@media (max-width: 425px) {
   /*  Fifth content  */
 
-.work_page{
-  padding-bottom: 35px;
-}
+  .work_page {
+    padding-bottom: 35px;
+  }
 
-.work_page_buttons{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+  .work_page_buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 
-.work_page_buttons .form-block-button button{
-  font: 10px $font-article;
-  width: 80px;
-  font-weight: 700;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  margin-top: 10px;
-}
+  .work_page_buttons .form-block-button button {
+    font: 10px $font-article;
+    width: 80px;
+    font-weight: 700;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-top: 10px;
+  }
 
-.work_page_buttons .form-block-button button:last-child{
-  width: 100px;
-}
+  .work_page_buttons .form-block-button button:last-child {
+    width: 100px;
+  }
 
-.work_page_buttons .form-block-button i{
-  font-size: 14px;
-  padding: 8px;
-  padding-top: 7px;
-  padding-bottom: 9px;
-}
+  .work_page_buttons .form-block-button i {
+    font-size: 14px;
+    padding: 8px;
+    padding-top: 7px;
+    padding-bottom: 9px;
+  }
 
-.fifth_photos_block{
-  grid-template-columns: repeat(1, 1fr);
-  grid-row-gap: 20px;
-}
+  .fifth_photos_block {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 20px;
+  }
 
-.icon_circle{
-  display: none;
-}
+  .icon_circle {
+    display: none;
+  }
 }
